Wrapping on the correct code side

--- a/css/scss/index.scss
+++ b/css/scss/index.scss
@@ -12,7 +12,7 @@ h3 {
 #old .contents {
     border: 1px solid darkgray;
     margin: 5px;
-    white-space: pre;
+    white-space: break-spaces;
 }
 
 #diff {
